--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Acreditación UM</title>
+        <link rel="stylesheet" href="./src/assets/css/styles.css">
     </head>
     <body>
         <div id="root-app"></div>
