first view of charts implemented

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>Acreditación UM</title>
         <link rel="stylesheet" href="./src/assets/css/styles.css">
-        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     </head>
     <body>
         <div id="root-app"></div>
@@ -12,6 +12,8 @@
         <!-- Dependencies -->
         <script src="./node_modules/react/umd/react.development.js"></script>
         <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+        <script src="./node_modules/chart.js/dist/Chart.js"></script>
+        <script src="./node_modules/chartjs-funnel/dist/chart.funnel.bundled.js"></script>
 
         <!-- Main -->
         <script src="./dist/bundle.js"></script>
