working on page styles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Acreditación UM</title>
+        <title>Acreditación - Universidad de Manizales</title>
+        <link rel="icon" type="image/png" href="./src/assets/images/logo.png">
         <link rel="stylesheet" href="./src/assets/css/styles.css">
         <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     </head>
