rendering data in charts from server

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <!-- Dependencies -->
         <script src="./node_modules/react/umd/react.development.js"></script>
         <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
-        <script src="./node_modules/chart.js/dist/Chart.js"></script>
-        <script src="./node_modules/chartjs-funnel/dist/chart.funnel.bundled.js"></script>
+        <script src="./node_modules/chart.js/dist/Chart.min.js"></script>
+        <script src="./node_modules/chartjs-funnel/dist/chart.funnel.bundled.min.js"></script>
 
         <!-- Main -->
         <script src="./dist/bundle.js"></script>
