were included new loading component while component renders

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <title>Acreditación - Universidad de Manizales</title>
-        <link rel="icon" type="image/png" href="./src/assets/images/logo.png">
-        <link rel="stylesheet" href="./src/assets/css/styles.css">
+        <link rel="icon" type="image/png" href="./dist/assets/images/logo.png">
+        <link rel="stylesheet" href="./dist/assets/css/styles.css">
         <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     </head>
     <body>
