included css libraries and loaders from webpack

--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Acreditación - Universidad de Manizales</title>
-        <link rel="icon" type="image/png" href="./dist/assets/images/logo.png">
-        <link rel="stylesheet" href="./dist/assets/css/styles.css">
-        <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="icon" type="image/png" href="./dist/images/logo.png">
     </head>
     <body>
         <div id="root-app"></div>
@@ -13,8 +11,6 @@
         <!-- Dependencies -->
         <script src="./node_modules/react/umd/react.development.js"></script>
         <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
-        <script src="./node_modules/chart.js/dist/Chart.min.js"></script>
-        <script src="./node_modules/chartjs-funnel/dist/chart.funnel.bundled.min.js"></script>
 
         <!-- Main -->
         <script src="./dist/bundle.js"></script>
